--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<div>Hello</div>
+<div>Hello</div><head>
+<title>Hello World</title>
+</head>
+<body>
+  <p> this is an demo for para</p>
+
+</body>
